# dpu-communication-bench

./: CMakeLists.txt  README  benchmark.ipynb  run_all_benchmarks.sh  run_benchmark.sh  run_shipped_benchmark.sh
common/: checksum_common.h
data/: experimental_read.csv  replace_avxgather.csv  shipped.csv  unmodified.csv  write_512b_to_bank.csv  write_to_rank_broadcast.csv  write_to_rank_broadcast_blocked.csv
dpu/: Makefile  checksum.c
host/: CMakeLists.txt  benchmark.cpp  checksum.cpp  memory_bandwidth.cpp  timer.hpp
